force-app/main/default/objects/Application_Contact__c/Application_Contact__c.object-meta.xml
<CustomObject>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>APC-{000000}</displayFormat>
        <label>Application Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>