force-app/main/default/objects/Application_Contact__c/fields/abd_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>abd_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>