force-app/main/default/objects/Application_Contact__c/fields/abd_Credit_Gift_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>abd_Credit_Gift_Loan_Amount__c</fullName>
    <label>Credit/Gift Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>