force-app/main/default/objects/Application_Contact__c/fields/abd_EIN__c.field-meta.xml
<CustomField>
    <fullName>abd_EIN__c</fullName>
    <description>Used for State EIN typically on this object, but it could be a Federal EIN as well.</description>
    <label>EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>