force-app/main/default/objects/Application_Contact__c/fields/abd_LicenseeBusinessType__c.field-meta.xml
<CustomField>
    <fullName>abd_LicenseeBusinessType__c</fullName>
    <formula>Text(Application__r.MUSW__Account__r.Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LicenseeBusinessType</label>
    <type>Text</type>
</CustomField>