force-app/main/default/objects/Application_Contact__c/fields/abd_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Owner</label>
    <type>Checkbox</type>
</CustomField>