force-app/main/default/objects/Application_Contact__c/fields/abd_State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>abd_State_of_Incorporation__c</fullName>
    <label>State of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>