force-app/main/default/objects/Application_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>SSN__c</columns>
    <columns>of_Ownership__c</columns>
    <columns>License__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>